@@ -5,16 +5,15 @@
  * The ASF licenses this file to You under the Apache License, Version 2.0
  * (the "License"); you may not use this file except in compliance with
  * the License.  You may obtain a copy of the License at
- * 
+ *
  *      http://www.apache.org/licenses/LICENSE-2.0
- * 
+ *
  * Unless required by applicable law or agreed to in writing, software
  * distributed under the License is distributed on an "AS IS" BASIS,
  * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  * See the License for the specific language governing permissions and
  * limitations under the License.
  */
-
 package org.apache.catalina.mbeans;
 
 import java.io.File;
@@ -27,6 +26,7 @@ import org.apache.catalina.Container;
 import org.apache.catalina.Context;
 import org.apache.catalina.Engine;
 import org.apache.catalina.Host;
+import org.apache.catalina.JmxEnabled;
 import org.apache.catalina.Server;
 import org.apache.catalina.Service;
 import org.apache.catalina.Valve;
@@ -46,23 +46,19 @@ import org.apache.catalina.realm.UserDatabaseRealm;
 import org.apache.catalina.session.StandardManager;
 import org.apache.catalina.startup.ContextConfig;
 import org.apache.catalina.startup.HostConfig;
-import org.apache.catalina.util.LifecycleMBeanBase;
 import org.apache.catalina.valves.AccessLogValve;
 import org.apache.catalina.valves.RemoteAddrValve;
 import org.apache.catalina.valves.RemoteHostValve;
-import org.apache.catalina.valves.ValveBase;
+import org.apache.juli.logging.Log;
+import org.apache.juli.logging.LogFactory;
 
 
 /**
- * <p>A <strong>ModelMBean</strong> implementation for the
- * <code>org.apache.catalina.core.StandardServer</code> component.</p>
- *
  * @author Amy Roh
  */
 public class MBeanFactory {
 
-    private static final org.apache.juli.logging.Log log = 
-        org.apache.juli.logging.LogFactory.getLog(MBeanFactory.class);
+    private static final Log log = LogFactory.getLog(MBeanFactory.class);
 
     /**
      * The <code>MBeanServer</code> for this application.
@@ -83,7 +79,7 @@ public class MBeanFactory {
     public MBeanFactory() {
 
         super();
-        
+
     }
 
 
@@ -99,6 +95,7 @@ public class MBeanFactory {
 
     /**
      * Set the container that this factory was created for.
+     * @param container The associated container
      */
     public void setContainer(Object container) {
         this.container = container;
@@ -140,14 +137,14 @@ public class MBeanFactory {
         }
         return t;
     }
-    
+
    /**
-     * Get Parent ContainerBase to add its child component 
+     * Get Parent ContainerBase to add its child component
      * from parent's ObjectName
      */
-    private ContainerBase getParentContainerFromParent(ObjectName pname) 
+    private ContainerBase getParentContainerFromParent(ObjectName pname)
         throws Exception {
-        
+
         String type = pname.getKeyProperty("type");
         String j2eeType = pname.getKeyProperty("j2eeType");
         Service service = getService(pname);
@@ -172,29 +169,29 @@ public class MBeanFactory {
             }
         }
         return null;
-        
+
     }
 
 
     /**
-     * Get Parent ContainerBase to add its child component 
+     * Get Parent ContainerBase to add its child component
      * from child component's ObjectName  as a String
-     */    
-    private ContainerBase getParentContainerFromChild(ObjectName oname) 
+     */
+    private ContainerBase getParentContainerFromChild(ObjectName oname)
         throws Exception {
-        
+
         String hostName = oname.getKeyProperty("host");
         String path = oname.getKeyProperty("path");
         Service service = getService(oname);
         StandardEngine engine = (StandardEngine) service.getContainer();
-        if (hostName == null) {             
+        if (hostName == null) {
             // child's container is Engine
             return engine;
-        } else if (path == null) {      
+        } else if (path == null) {
             // child's container is Host
             StandardHost host = (StandardHost) engine.findChild(hostName);
             return host;
-        } else {                
+        } else {
             // child's container is Context
             StandardHost host = (StandardHost) engine.findChild(hostName);
             path = getPathStr(path);
@@ -203,9 +200,9 @@ public class MBeanFactory {
         }
     }
 
-    
+
     private Service getService(ObjectName oname) throws Exception {
-    
+
         if (container instanceof Service) {
             // Don't bother checking the domain - this is the only option
             return (Service) container;
@@ -225,12 +222,12 @@ public class MBeanFactory {
         if (service == null ||
                 !service.getObjectName().getDomain().equals(domain)) {
             throw new Exception("Service with the domain is not found");
-        }        
+        }
         return service;
 
     }
-    
-    
+
+
     /**
      * Create a new AccessLoggerValve.
      *
@@ -255,7 +252,7 @@ public class MBeanFactory {
         return (oname.toString());
 
     }
-        
+
 
     /**
      * Create a new AjpConnector
@@ -263,6 +260,7 @@ public class MBeanFactory {
      * @param parent MBean Name of the associated parent component
      * @param address The IP address on which to bind
      * @param port TCP port number to listen on
+     * @return the object name of the created connector
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -271,16 +269,23 @@ public class MBeanFactory {
 
         return createConnector(parent, address, port, true, false);
     }
-    
+
+
     /**
      * Create a new DataSource Realm.
      *
      * @param parent MBean Name of the associated parent component
-     *
+     * @param dataSourceName the datasource name
+     * @param roleNameCol the column name for the role names
+     * @param userCredCol the column name for the user credentials
+     * @param userNameCol the column name for the user names
+     * @param userRoleTable the table name for the roles table
+     * @param userTable the table name for the users
+     * @return the object name of the created realm
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createDataSourceRealm(String parent, String dataSourceName, 
-        String roleNameCol, String userCredCol, String userNameCol, 
+    public String createDataSourceRealm(String parent, String dataSourceName,
+        String roleNameCol, String userCredCol, String userNameCol,
         String userRoleTable, String userTable) throws Exception {
 
         // Create a new DataSourceRealm instance
@@ -303,9 +308,9 @@ public class MBeanFactory {
             return (oname.toString());
         } else {
             return null;
-        }   
-
+        }
     }
+
 
     /**
      * Create a new HttpConnector
@@ -313,6 +318,7 @@ public class MBeanFactory {
      * @param parent MBean Name of the associated parent component
      * @param address The IP address on which to bind
      * @param port TCP port number to listen on
+     * @return the object name of the created connector
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -320,6 +326,7 @@ public class MBeanFactory {
             throws Exception {
         return createConnector(parent, address, port, false, false);
     }
+
 
     /**
      * Create a new Connector
@@ -350,11 +357,11 @@ public class MBeanFactory {
         ObjectName pname = new ObjectName(parent);
         Service service = getService(pname);
         service.addConnector(retobj);
-        
+
         // Return the corresponding MBean name
         ObjectName coname = retobj.getObjectName();
-        
-        return (coname.toString());
+
+        return coname.toString();
     }
 
 
@@ -364,6 +371,7 @@ public class MBeanFactory {
      * @param parent MBean Name of the associated parent component
      * @param address The IP address on which to bind
      * @param port TCP port number to listen on
+     * @return the object name of the created connector
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -372,14 +380,20 @@ public class MBeanFactory {
         return createConnector(parent, address, port, false, true);
     }
 
+
     /**
      * Create a new JDBC Realm.
      *
      * @param parent MBean Name of the associated parent component
+     * @param driverName JDBC driver name
+     * @param connectionName the user name for the connection
+     * @param connectionPassword the password for the connection
+     * @param connectionURL the connection URL to the database
+     * @return the object name of the created realm
      *
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createJDBCRealm(String parent, String driverName, 
+    public String createJDBCRealm(String parent, String driverName,
         String connectionName, String connectionPassword, String connectionURL)
         throws Exception {
 
@@ -402,8 +416,7 @@ public class MBeanFactory {
             return (oname.toString());
         } else {
             return null;
-        }   
-
+        }
     }
 
 
@@ -411,11 +424,11 @@ public class MBeanFactory {
      * Create a new JNDI Realm.
      *
      * @param parent MBean Name of the associated parent component
+     * @return the object name of the created realm
      *
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createJNDIRealm(String parent)
-        throws Exception {
+    public String createJNDIRealm(String parent) throws Exception {
 
          // Create a new JNDIRealm instance
         JNDIRealm realm = new JNDIRealm();
@@ -432,9 +445,7 @@ public class MBeanFactory {
             return (oname.toString());
         } else {
             return null;
-        }   
-
-
+        }
     }
 
 
@@ -442,11 +453,11 @@ public class MBeanFactory {
      * Create a new Memory Realm.
      *
      * @param parent MBean Name of the associated parent component
+     * @return the object name of the created realm
      *
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createMemoryRealm(String parent)
-        throws Exception {
+    public String createMemoryRealm(String parent) throws Exception {
 
          // Create a new MemoryRealm instance
         MemoryRealm realm = new MemoryRealm();
@@ -462,8 +473,7 @@ public class MBeanFactory {
             return (oname.toString());
         } else {
             return null;
-        }   
-
+        }
     }
 
 
@@ -517,7 +527,7 @@ public class MBeanFactory {
         containerBase.getPipeline().addValve(valve);
         ObjectName oname = valve.getObjectName();
         return (oname.toString());
-        
+
     }
 
 
@@ -547,37 +557,41 @@ public class MBeanFactory {
         return (oname.toString());
 
     }
-    
-    
+
+
    /**
      * Create a new StandardContext.
      *
      * @param parent MBean Name of the associated parent component
      * @param path The context path for this Context
      * @param docBase Document base directory (or WAR) for this Context
+     * @return the object name of the created context
      *
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createStandardContext(String parent, 
+    public String createStandardContext(String parent,
                                         String path,
                                         String docBase)
         throws Exception {
-                                            
+
         return createStandardContext(parent, path, docBase, false, false,
-                false, false);                                  
+                false, false);
     }
 
 
-   /**
+    /**
      * Create a new StandardContext.
      *
      * @param parent MBean Name of the associated parent component
      * @param path The context path for this Context
      * @param docBase Document base directory (or WAR) for this Context
+     * @param xmlValidation if XML descriptors should be validated
+     * @param xmlNamespaceAware if the XML processor should namespace aware
+     * @return the object name of the created context
      *
      * @exception Exception if an MBean cannot be created or registered
      */
-    public String createStandardContext(String parent, 
+    public String createStandardContext(String parent,
                                         String path,
                                         String docBase,
                                         boolean xmlValidation,
@@ -595,7 +609,7 @@ public class MBeanFactory {
         context.setXmlNamespaceAware(xmlNamespaceAware);
         context.setTldValidation(tldValidation);
         context.setTldNamespaceAware(tldNamespaceAware);
-        
+
         ContextConfig contextConfig = new ContextConfig();
         context.addLifecycleListener(contextConfig);
 
@@ -646,6 +660,7 @@ public class MBeanFactory {
      * @param deployOnStartup Deploy on server startup?
      * @param deployXML Should we deploy Context XML config files property?
      * @param unpackWARs Should we unpack WARs when auto deploying?
+     * @return the object name of the created host
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -653,7 +668,7 @@ public class MBeanFactory {
                                      String appBase,
                                      boolean autoDeploy,
                                      boolean deployOnStartup,
-                                     boolean deployXML,                                       
+                                     boolean deployXML,
                                      boolean unpackWARs)
         throws Exception {
 
@@ -665,7 +680,7 @@ public class MBeanFactory {
         host.setDeployOnStartup(deployOnStartup);
         host.setDeployXML(deployXML);
         host.setUnpackWARs(unpackWARs);
-    
+
         // add HostConfig for active reloading
         HostConfig hostConfig = new HostConfig();
         host.addLifecycleListener(hostConfig);
@@ -687,7 +702,8 @@ public class MBeanFactory {
      *
      * @param domain       Domain name for the container instance
      * @param defaultHost  Name of the default host to be used in the Engine
-     * @param baseDir      Base directory value for Engine 
+     * @param baseDir      Base directory value for Engine
+     * @return the object name of the created service
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -697,7 +713,7 @@ public class MBeanFactory {
         if (!(container instanceof Server)) {
             throw new Exception("Container not Server");
         }
-        
+
         StandardEngine engine = new StandardEngine();
         engine.setDomain(domain);
         engine.setName(domain);
@@ -707,17 +723,18 @@ public class MBeanFactory {
         Service service = new StandardService();
         service.setContainer(engine);
         service.setName(domain);
-        
+
         ((Server) container).addService(service);
-        
+
         return engine.getObjectName().toString();
     }
-    
-    
+
+
     /**
      * Create a new StandardManager.
      *
      * @param parent MBean Name of the associated parent component
+     * @return the object name of the created manager
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -732,14 +749,14 @@ public class MBeanFactory {
         ContainerBase containerBase = getParentContainerFromParent(pname);
         if (containerBase != null) {
             containerBase.setManager(manager);
-        } 
+        }
         ObjectName oname = manager.getObjectName();
         if (oname != null) {
-            return (oname.toString());
+            return oname.toString();
         } else {
             return null;
         }
-        
+
     }
 
 
@@ -749,6 +766,7 @@ public class MBeanFactory {
      * @param parent MBean Name of the associated parent component
      * @param resourceName Global JNDI resource name of the associated
      *  UserDatabase
+     * @return the object name of the created realm
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -758,7 +776,7 @@ public class MBeanFactory {
          // Create a new UserDatabaseRealm instance
         UserDatabaseRealm realm = new UserDatabaseRealm();
         realm.setResourceName(resourceName);
-        
+
         // Add the new instance to its parent component
         ObjectName pname = new ObjectName(parent);
         ContainerBase containerBase = getParentContainerFromParent(pname);
@@ -767,13 +785,13 @@ public class MBeanFactory {
         // Return the corresponding MBean name
         ObjectName oname = realm.getObjectName();
         // FIXME getObjectName() returns null
-        //ObjectName oname = 
+        //ObjectName oname =
         //    MBeanUtils.createObjectName(pname.getDomain(), realm);
         if (oname != null) {
             return (oname.toString());
         } else {
             return null;
-        }   
+        }
 
     }
 
@@ -788,7 +806,8 @@ public class MBeanFactory {
      *
      * @return  The MBean name of the {@link Valve} that was created or
      *          <code>null</code> if the {@link Valve} does not implement
-     *          {@link LifecycleMBeanBase}.
+     *          {@link JmxEnabled}.
+     * @exception Exception if an MBean cannot be created or registered
      */
     public String createValve(String className, String parent)
             throws Exception {
@@ -802,12 +821,12 @@ public class MBeanFactory {
             throw new IllegalArgumentException();
         }
 
-        Valve valve = (Valve) Class.forName(className).newInstance();
+        Valve valve = (Valve) Class.forName(className).getConstructor().newInstance();
 
         container.getPipeline().addValve(valve);
 
-        if (valve instanceof LifecycleMBeanBase) {
-            return ((LifecycleMBeanBase) valve).getObjectName().toString();
+        if (valve instanceof JmxEnabled) {
+            return ((JmxEnabled) valve).getObjectName().toString();
         } else {
             return null;
         }
@@ -818,6 +837,7 @@ public class MBeanFactory {
      * Create a new Web Application Loader.
      *
      * @param parent MBean Name of the associated parent component
+     * @return the object name of the created loader
      *
      * @exception Exception if an MBean cannot be created or registered
      */
@@ -832,13 +852,13 @@ public class MBeanFactory {
         ContainerBase containerBase = getParentContainerFromParent(pname);
         if (containerBase != null) {
             containerBase.setLoader(loader);
-        } 
+        }
         // FIXME add Loader.getObjectName
         //ObjectName oname = loader.getObjectName();
-        ObjectName oname = 
+        ObjectName oname =
             MBeanUtils.createObjectName(pname.getDomain(), loader);
-        return (oname.toString());
-        
+        return oname.toString();
+
     }
 
 
@@ -932,7 +952,7 @@ public class MBeanFactory {
             } catch (Exception e) {
                 log.warn("Error during context [" + context.getName() + "] destroy ", e);
            }
-   
+
         }
 
     }
@@ -972,9 +992,8 @@ public class MBeanFactory {
 
         ObjectName oname = new ObjectName(name);
         // Acquire a reference to the component to be removed
-        ContainerBase container = getParentContainerFromChild(oname);    
+        ContainerBase container = getParentContainerFromChild(oname);
         container.setLoader(null);
-        
     }
 
 
@@ -989,9 +1008,8 @@ public class MBeanFactory {
 
         ObjectName oname = new ObjectName(name);
         // Acquire a reference to the component to be removed
-        ContainerBase container = getParentContainerFromChild(oname);    
+        ContainerBase container = getParentContainerFromChild(oname);
         container.setManager(null);
-
     }
 
 
@@ -1006,7 +1024,7 @@ public class MBeanFactory {
 
         ObjectName oname = new ObjectName(name);
         // Acquire a reference to the component to be removed
-        ContainerBase container = getParentContainerFromChild(oname); 
+        ContainerBase container = getParentContainerFromChild(oname);
         container.setRealm(null);
     }
 
@@ -1023,10 +1041,10 @@ public class MBeanFactory {
         if (!(container instanceof Server)) {
             throw new Exception();
         }
-        
+
         // Acquire a reference to the component to be removed
         ObjectName oname = new ObjectName(name);
-        Service service = getService(oname); 
+        Service service = getService(oname);
         ((Server) container).removeService(service);
     }
 
@@ -1045,7 +1063,7 @@ public class MBeanFactory {
         ContainerBase container = getParentContainerFromChild(oname);
         Valve[] valves = container.getPipeline().getValves();
         for (int i = 0; i < valves.length; i++) {
-            ObjectName voname = ((ValveBase) valves[i]).getObjectName();
+            ObjectName voname = ((JmxEnabled) valves[i]).getObjectName();
             if (voname.equals(oname)) {
                 container.getPipeline().removeValve(valves[i]);
             }
